[build-system]
requires = ["setuptools>=41.2", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "odvc"
description = "Ocean Dimensionless Vertical Coordinates"
readme = "README.md"
license = { file = "LICENSE.txt" }
maintainers = [
  { name = "Filipe Fernandes", email = "ocefpaf+odvc@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "dependencies",
  "version",
]
urls.documentation = "https://pyoceans.github.io/odvc"
urls.homepage = "https://github.com/pyoceans/odvc"
urls.repository = "https://github.com/pyoceans/odvc"

[tool.setuptools]
packages = [
  "odvc",
]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = [
  "requirements.txt",
] }

[tool.setuptools_scm]
write_to = "odvc/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.check-manifest]
ignore = [
  "*.yml",
  ".coveragerc",
  "Makefile",
  "docs",
  "docs/*",
  "notebooks",
  "notebooks/*",
  "tests",
  "tests/*",
]

[tool.pytest.ini_options]
markers = [
  "web: marks tests require connection (deselect with '-m \"not web\"')",
  "serial: marks tests that cannot be run in parallel (deselect with '-m \"not serial\"')",
]
filterwarnings = [
  "error:::odvc.*",
  "ignore::UserWarning",
  "ignore::RuntimeWarning",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 85
exclude = ["setup.py", "docs", "tests"]
verbose = 1
quiet = false
color = true
