[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=41.2", "setuptools-scm" ]

[project]
name = "odvc"
description = "Ocean Dimensionless Vertical Coordinates"
readme = "README.md"
license = { file = "LICENSE.txt" }
maintainers = [
  { name = "Filipe Fernandes", email = "ocefpaf+odvc@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "dask>=2024",
  "netcdf4",
  "numpy",
]
urls.documentation = "https://pyoceans.github.io/odvc"
urls.homepage = "https://github.com/pyoceans/odvc"
urls.repository = "https://github.com/pyoceans/odvc"

[tool.setuptools]
packages = [
  "odvc",
]
include-package-data = true

[tool.setuptools_scm]
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"
write_to = "odvc/_version.py"
write_to_template = "__version__ = '{version}'"

[tool.interrogate]
fail-under = 85
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
exclude = [ "docs", "tests" ]
color = true
verbose = 1
quiet = false

[tool.check-manifest]
ignore = [
  "*.yml",
  ".coveragerc",
  "docs",
  "docs/*",
  "Makefile",
  "notebooks",
  "notebooks/*",
  "tests",
  "tests/*",
]

[tool.pytest]
ini_options.markers = [
  "serial: marks tests that cannot be run in parallel (deselect with '-m \"not serial\"')",
  "web: marks tests require connection (deselect with '-m \"not web\"')",
]
ini_options.filterwarnings = [
  "error:::odvc.*",
  "ignore::RuntimeWarning",
  "ignore::UserWarning",
]
