[metadata]
name = odvc
description = Ocean Dimensionless Vertical Coordinates
author = Filipe Fernandes
author_email = ocefpaf@gmail.com
url = https://github.com/pyoceans/odvc
long_description_content_type = text/markdown
long_description = file: README.md
license = BSD-3-Clause
license_files = LICENSE.txt
keywords = CF-conventions dimensionless coordinate vertical coordinate
project_urls =
    Documentation = https://ioos.github.io/odvc
    Bug Tracker = https://github.com/ioos/odvc/issues
    Source Code = https://github.com/ioos/odvc
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
zip_safe = True
include_package_data = True
install_requires =
    dask >=1
    netcdf4
    numpy
python_requires = >=3.7
packages = find:

[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    .coveragerc
    Makefile
    docs
    docs/*
    notebooks
    notebooks/*
    tests
    tests/*
